--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<ul class="icons">
 								<li><a href="#" class="far fa-wallet">fa-wallet</a></li>
 								<li><a href="#" class="icon brands ">Staking</a></li>
-								<li><a href="#" class="icon brands fa-github">Github</a></li>
+								<li><a href="https://github.com/GorillaWallet" class="icon brands fa-github">Github</a></li>
 							</ul>
 						</footer>
 					</section>
