--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<footer>
 							<ul class="icons">
 								<li><a href="#" class="far fa-wallet">fa-wallet</a></li>
-								<li><a href="#" class="icon brands ">Staking</a></li>
+								<li><a href="#" class="fa-paper-plane">Staking</a></li>
 								<li><a href="https://github.com/GorillaWallet" class="icon brands fa-github">Github</a></li>
 							</ul>
 						</footer>
