--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 						#nothing here but us crickets! Also Beard is a fucking champion!
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="far fa-wallet">fa-wallet</a></li>
-								<li><a href="#" class="fa-paper-plane">Staking</a></li>
+								<li><a href="#" class="fa-wallet">fa-wallet</a></li>
+								<li><a href="t.me/gorillawallet" class="fa-paper-plane">Telegram</a></li>
 								<li><a href="https://github.com/GorillaWallet" class="icon brands fa-github">Github</a></li>
 							</ul>
 						</footer>
