--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						#nothing here but us crickets! Also Beard is a fucking champion!
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="fa-wallet">fa-wallet</a></li>
+								<li><a href="https://twitter.com/gorilla_wallet" class="icon brands fa-twitter">Twitter</a></li>
 								<li><a href="t.me/gorillawallet" class="fa-paper-plane">Telegram</a></li>
 								<li><a href="https://github.com/GorillaWallet" class="icon brands fa-github">Github</a></li>
 							</ul>
