--- a/index.html
+++ b/index.html
@@ -19,12 +19,24 @@
 							<h1>Gorilla Wallet</h1>
 							<p>GET A GRIP ON YOUR CRYPTO</p>
 						</header>
-						#nothing here but us crickets! Also Beard is a fucking champion!
+<p>Welcome to Gorilla Wallet, A Next-Gen wallet system that provides.</p>
+<p style="text-align: left;"><br></p>
+<ul>
+    <li style="text-align: left;">Native BTC integration</li>
+    <li style="text-align: left;">Swapping</li>
+    <li style="text-align: left;">Time Lock Functionality</li>
+    <li style="text-align: left;">Real Time Analytics</li>
+    <li style="text-align: left;">Rewards</li>
+    <li style="text-align: left;">Staking</li>
+    <li style="text-align: left;">IOS/ANDROID integration</li>
+    <li style="text-align: left;">Browser extension integration</li>
+    <li style="text-align: left;">Polkadot/Avalanche/Ethereum standard display</li>
+</ul>
 						<footer>
 							<ul class="icons">
-								<li><a href="https://twitter.com/gorilla_wallet" class="fa-twitter">Twitter</a></li>
-								<li><a href="t.me/gorillawallet" class="fa-paper-plane">Telegram</a></li>
-								<li><a href="https://github.com/GorillaWallet" class="fa-github">Github</a></li>
+								<li><a href="#" class="icon brands fa-twitter">fa-wallet</a></li>
+								<li><a href="#" class="fa-paper-plane">Telegram</a></li>
+								<li><a href="#" class="icon brands fa-github">Github</a></li>
 							</ul>
 						</footer>
 					</section>
