--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 </ul>
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter">fa-wallet</a></li>
-								<li><a href="#" class="fa-paper-plane">Telegram</a></li>
-								<li><a href="#" class="icon brands fa-github">Github</a></li>
+								<li><a href="https://twitter.com/gorilla_wallet" class="icon brands fa-twitter">Twitter</a></li>
+								<li><a href="t.me/GorillaWallet" class="fa-paper-plane">Telegram</a></li>
+								<li><a href="https://github.com/GorillaWallet" class="icon brands fa-github">Github</a></li>
 							</ul>
 						</footer>
 					</section>
