--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+							<span class="avatar"><img src="images/avatar.png" alt="" /></span>
 							<h1>Gorilla Wallet</h1>
 							<p>GET A GRIP ON YOUR CRYPTO</p>
 						</header>
