--- a/index.html
+++ b/index.html
@@ -121,12 +121,7 @@ rel="stylesheet">
                </div>
           </div>
           <div class="parent">
-              
-               <div class ="btn:hover">
-                     <div class="button">
-      <button>Chrome extension</button>
-               </div>
-               </div>
+               <a href="link to download" class="wow fadeInUp smoothScroll btn btn-default section-btn" data-wow-delay="1s">Download extension</a>
           </div>
      </section>
 
