--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ rel="stylesheet">
                          <div class="home-info">
                               <h9>Partnerships</h9>
                               <br>
-                              <h8>We have partnered with Bit Alliance DAO <link to partnership articles> and Reflect Finance <link to partnership articles>, so at launch, users will be rewarded for holding RFI and BPT in their ACME wallet. Any RFI foundation or BPT holders o are eligible for this. Just create a wallet and put your tokens in it to experience the first ever self-custodial staking experience in DeFi. It really is a crypto purist’s dream.
+                              <h8>We have partnered with Bit Alliance DAO <link to partnership articles> and Reflect Finance <link to partnership articles>, so at launch, users will be rewarded for RFI foundation and BPT holders in their ACME wallet. Any RFI foundation or BPT holders o are eligible for this. Just create a wallet and put your tokens in it to experience the first ever self-custodial staking experience in DeFi. It really is a crypto purist’s dream.
                                    <br>
                               </h8>
                          </div>
