--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 	<title>ACME Wallet</title>
-     <link rel="shortcut icon" href="images/utility.png" />
+     <link rel="shortcut icon" href="images/banner.jpg" />
 
 	
      <meta charset="UTF-8">
