--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" 
 rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
+
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
@@ -32,7 +33,7 @@ rel="stylesheet">
 </head>
 <body>
 
-     <!--Header/Navigation-->
+     <!--Header/Navigation--->
      <section class="preloader">
           <div class="spinner">
 
