--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ rel="stylesheet">
                     <div class="col-md-offset-3 col-md-6 col-sm-12">
                          
                          <div class="home-info"> 
-                          <img src="images/banner3.png" alt=height="auto" width="600px"> 
+                          <img src="images/banner3.png"> 
                               
                             <h2>All Cryptos<br>Manage Everything</h2>
                               <br>
